class Apellido{
    private String apellido;

    public void cambiar(String nuevoApellido) {
        this.apellido = nuevoApellido;
    }
}