class Caracter{

    private String descripcion;

    public Caracter(String descripcion){
        this.descripcion = descripcion;
    }

    public void modificar(String nuevaDescripcion){
        this.descripcion = nuevaDescripcion;
    }
    
}