class Dni{

    private String numero;

    public Dni(String numero){
        this.numero = numero;
    }

    public String presentar(){
        return numero;
    }
    
}