class Edad{

    private int tiempoDeVida;

    public Edad(int edad){
        this.tiempoDeVida = edad;
    }

    public void aumentar(){
        tiempoDeVida++;
    }
}