class EducacionAcademica{

    private String nombre;

    public EducacionAcademica(String nombre){
        this.nombre = nombre;
    }
    
}