class Genero{

    private String nombre;

    public Genero(String nombre){
        this.nombre = nombre;
    }

    public void cambiar(String nuevoGenero) {
        this.nombre = nuevoGenero;
    }
    
}