class Gusto{

    private String nombre;

    public Gusto(String nombre){
        this.nombre = nombre;
    }

    public void practicar(){
        System.out.println("Practicando " + nombre); 
    }
    
}