class Idioma{

    private String nombre;

    public Idioma(String nombre){
        this.nombre = nombre;
    }
    
}