class Nacion{

    private String nombre;

    public Nacion(String nombre){
        this.nombre= nombre;
    }
    
}