class Nombre{

    private String nombre;

    public Nombre(String nombre){
        this.nombre = nombre;
    }

    public void cambiar(String nuevoNombre) {
        this.nombre = nuevoNombre;
    }
    
}