class Profesion{

    private String ocupacion;

    public Profesion(String ocupacion){
        this.ocupacion = ocupacion;
    }
    
}