class RasgoFisico{

    private String descripcion;

    public RasgoFisico(String descripcion){
        this.descripcion = descripcion;
    }
    
}