class Religion{

    private String nombre;

    public Religion(String nombre){
        this.nombre = nombre;
    }
    
}